security-groups.tf
resource "aws_security_group" "load_balancer_sec_group" {
  name   = "load_balancer_sec_group"
  vpc_id = aws_vpc.webapp.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
